[gd_scene load_steps=4 format=3 uid="uid://b0behaojbgxer"]

[ext_resource type="Script" path="res://Scripts/Multiplayer/host_menu.gd" id="1_wanai"]
[ext_resource type="Texture2D" uid="uid://b0aftx1nq7cqg" path="res://Assets/Sprites/default-avatar-medium.png" id="2_uwpbg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5huaf"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="HostMenu" type="Control" node_paths=PackedStringArray("mapTextureRect", "mapNameLabel")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wanai")
mapDirectory = "res://Resources/MapResources"
mapTextureRect = NodePath("PanelContainer/MarginContainer/VBoxContainer/MapIcon/Icon")
mapNameLabel = NodePath("PanelContainer/MarginContainer/VBoxContainer/MapSelector/MapName")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -244.0
offset_right = 336.0
offset_bottom = 244.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MapIcon" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/MapIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uwpbg")
expand_mode = 1

[node name="MapSelector" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Left" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="MapName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MapSelector"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_5huaf")
text = "Some Map"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Right" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MapSelector"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="HostButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSelector/Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MapSelector/Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
